<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">aRoboBT</string>
    <string name="title_section1">Movement</string>
    <string name="title_section2">Bluetooth</string>
    <string name="title_section3">Preferences</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_example2">Example action 2</string>

    <!-- special string -->
    <string name="turn2landscape">please,\n turn to \nlandscape</string>

    <!-- fragment movement -->
    <string name="connected_status_off">BT not connected</string>
    <string name="connected_status_on">BT connected</string>
    <string name="connect_button">BT connect</string>
    <string name="moving_status_stop">stopped</string>
    <string name="moving_status_move">moving</string>
    <string name="move_button_off">MOVE</string>
    <string name="move_button_on">STOP</string>
    <string name="textLabelLeftRightData">Left  Right command values</string>
    <string name="textLabelLeft">Left</string>
    <string name="textLabelRight">Right</string>
    <string name="startSavingSensorData">Start</string>
    <string name="savingSensorData">Stop</string>
    <string name="savingSensorDataAction">Save</string>
    <string name="set_roll_offset">set Roll Offset</string>
    <string name="SavingStatus">saving...</string>
    
    
    <string-array name="display_list">
        <item>graphic_view</item>
        <item>pure_data</item>
    </string-array>

    <!-- BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to</string>
    <string name="title_not_connected">not connected</string>

    <!-- DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">connect a device - Secure</string>
    <string name="insecure_connect">connect</string>
    <string name="discoverable">make discoverable</string>

    <!-- settings strings -->
    
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_saving">Saving...</string>
    <string name="param_delay">Delay</string>
    <string name="param_factor">Filter factor</string>
    <string name="ParamDetailActValue">Parameter Act Value</string>
    <string name="pref_robot_motor_title">Robot parameters</string>
    <string name="pref_sensores_settings_title">Sensors settings</string>
    <string name="pref_various_title">Various settings</string>
    
    <!-- 
    Reto dummy strings
     -->
  <string name="menu_update">Refresh Earthquakes</string>
  <string name="auto_update_prompt">Auto Update?</string>
  <string name="update_freq_prompt">Update Frequency</string>
  <string name="min_quake_mag_prompt">Minimum Quake Magnitude</string>
  <string name="menu_preferences">Preferences</string>
    
    
</resources>